primitive world gen, world rendering, player movement